@@ -10,6 +10,12 @@ To-do:
 0.24 20110416
     . Redo connect logic in ->setup, so that we handle cases
       where MozRepl is unavailable gracefully.
+    . Add CLEAR method to tied objects so now list-assignment
+      to a hash works:
+      
+          %$foo = (Just => 'another', Javascript => 'Hacker');
+          $foo->{Just} # another
+          $foo->{Javascript} # Hacker
 
 0.23 20110415
     . Fix test failures
